# HordeWorkerReGen

./: .gitignore  .pre-commit-config.yaml  COMFYUI_VERSION_INFO.md  COMPLETE_SOLUTION.md  FINAL_VALIDATION.txt  GRANULAR_PROGRESS_IMPLEMENTATION.md  HARDENING_SUMMARY.md  HUNG_JOBS_FIX.md  IMPLEMENTATION_SUMMARY.md  JOB_RETRY_VISIBILITY_FIX.md  LAST_STEP_FIX.md  PERFORMANCE_IMPROVEMENT_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PORT_CHANGE_SUMMARY.md  PROCESS_STARTING_FIX_SUMMARY.md  PROGRESS_VISUAL_GUIDE.md  PR_VALIDATION_REPORT.md  README.md  README_advanced.md  SECURITY_HARDENING.md  TERMINAL_OUTPUT_FINAL.md  TERMINAL_OUTPUT_IMPROVEMENTS.md  VALIDATION_SUMMARY.txt  bridgeData_template.yaml  convert_config_to_env.py  demo_terminal_output.py  download_models.py  environment.rocm.yaml  horde-bridge-directml.cmd  horde-bridge-rocm.sh  horde-bridge.cmd  horde-bridge.sh  pyproject.toml  requirements.dev.txt  requirements.directml.txt  requirements.rocm.txt  requirements.txt  run_worker.py  setup.py  tox.ini  (+5 more)
Dockerfiles/: Dockerfile.cuda  Dockerfile.rocm  README.md  entrypoint.sh  setup_cuda.sh
horde_worker_regen/: __init__.py  _horde_compat.py  _version_meta.json  consts.py  download_models.py  load_env_vars.py  localize.py  logger_config.py  run_worker.py  version_meta.py
tests/: conftest.py  test_bridge_data.py  test_console_colors.py  test_crash_resilience.py  test_granular_progress.py  test_head_of_queue_line_skip.py  test_horde_dep_updates.py  test_job_state_transitions.py  test_kudos_interval.py  test_log_console_rewriter.py  test_logger_config.py  test_webui.py  (+5 more)
(+13 files in other folders)
