[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "horde_worker_regen"
version = "10.1.2"
description = "Allows you to connect to the AI Horde and generate images for users."
authors = [
    {name = "tazlin", email = "tazlin.on.github@gmail.com"},
    {name = "db0", email = "mail@dbzer0.com"},
    {name = "Jug", email = "jugdev@proton.me"},
]
readme = "README.md"
requires-python = ">=3.10"
dynamic=["dependencies"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Development Status :: 2 - Pre-Alpha",
]

[project.urls]
"Homepage" = "https://github.com/Haidra-Org/AI-Horde-Worker"
"Bug Tracker" = "https://github.com/Haidra-Org/AI-Horde-Worker"


[project.scripts]
run_worker = "horde_worker_regen.run_worker:init"
download_models = "horde_worker_regen.download_models:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-dir]
horde_worker_regen = "horde_worker_regen"

[tool.setuptools.package-data]
tests = ["*.json"]
horde_worker_regen = ["assets/*.png"]


